--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.2",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
